<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:maxWidth="@dimen/item_display_width"
    android:layout_width="match_parent"
    android:maxHeight="@dimen/item_display_height"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/artifact_name"
        android:textSize="@dimen/item_name_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/artifact_category"
        android:textSize="@dimen/item_descriptors_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewMaterial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/artifact_material"
        android:textSize="@dimen/item_descriptors_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategory" />

    <TextView
        android:id="@+id/textViewPeriod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/artifact_period"
        android:textSize="@dimen/item_descriptors_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaterial" />
</androidx.constraintlayout.widget.ConstraintLayout>
